# auto-incident

./: .env.example  .gitignore  README.md  Readme.md  requirements.txt
.github/: copilot-instructions.md
agents/: __init__.py  orchestrator.py  triage_agent.py
auto-incident/: Readme.md  architecture.txt
auto-incident/auto-incident/: Readme.md  pyproject.toml  requirements.txt  run.py
auto-incident/auto-incident/frontend/: index.html
auto-incident/auto-incident/src/: __init__.py  config.py  main.py
auto-incident/auto-incident/src/agents/: __init__.py  commander.py  deploy_intel_agent.py  graph.py  llm.py  logs_agent.py  metrics_agent.py
auto-incident/auto-incident/src/alert_layer/: __init__.py  schemas.py  trigger.py
auto-incident/auto-incident/src/decision_engine/: __init__.py  engine.py  schemas.py
auto-incident/auto-incident/src/integrations/: __init__.py  deploy_client.py  logs_client.py  metrics_client.py
auto-incident/auto-incident/src/memory/: __init__.py  incident_memory.py  schemas.py
auto-incident/auto-incident/test_samples/: README.md  alerts.json  sample_logs.json  test_app.sh
auto-incident/auto-incident/tests/: __init__.py  test_alert_layer.py  test_memory.py
src/: app.py
utils/: config.py
